Both __str__ methods implemented

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -159,6 +159,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ae58da5",
+   "metadata": {},
+   "source": [
+    "There is one unfortunate thing about this implementation: `_separator` isn't part of the dataclass machinery (which means it isn't part of `repr`, `eq`, `hash` etc.). It doesn't matter to the functionality, because both `node1` and `node2` are completely determined by either `src` and `dest` or by the name of the two nodes. But the implication is that first, `repr` isn't connected to how the object is created, which hurts readibility and understandability. And second, just seeing the dataclass parameters of an object (node1=..., node2=..., weight=...) isn't enough to determine if the edge is directed or undirected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c35a6944",
    "metadata": {},
    "source": [
@@ -167,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [],
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -240,7 +248,7 @@
        "DirectedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=None)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "979e429e",
    "metadata": {},
    "outputs": [
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
@@ -284,52 +292,56 @@
     "    \"\"\"Directed graph.\"\"\"\n",
     "\n",
     "    # nodes is a list of the nodes in the graph.\n",
-    "    # edges is a dict mapping each node to a list of its children.\n",
-    "    # Implementation of these children depends on weighted: if True, children\n",
-    "    # implemented as tuples, where the first element is the child node\n",
-    "    # and the second element is the weight of the edge. When False, the only\n",
-    "    # element is the node. The first added edge determines the Digraph\n",
-    "    # for the rest of its life.\n",
+    "    # edges is a dict mapping each node to a list of its children implemented\n",
+    "    # as tuples, where the first element is the child node and the second\n",
+    "    # element, possibly empty (depending on weighted), is the weight of the edge.\n",
+    "    # The first added edge (or the argument to __init__) determines whether\n",
+    "    # the Digraph is weighted for the rest of its life.\n",
     "    # Internally, an \"edge\" is one-way only.\n",
     "    # Bidirectional edges treated as having an \"edge\" in both directions.\n",
     "\n",
     "    def __init__(self, weighted=None):\n",
+    "        \"\"\"When weighted is None, it is determined by the first added edge.\"\"\"\n",
     "        self._nodes = []\n",
     "        self._edges = {}\n",
     "        self.weighted = weighted\n",
+    "        self._last_computed_str = \"Empty graph\"\n",
+    "        self._str_valid = True\n",
     "\n",
-    "    def add_node(self, node):\n",
+    "    def add_node(self, node) -> None:\n",
     "        if self.has_node(node):\n",
     "            raise ValueError(\"Duplicate node\")\n",
     "        else:\n",
     "            self._nodes.append(node)\n",
     "            self._edges[node] = []\n",
+    "        self._str_valid = False\n",
     "\n",
-    "    def _insert_edge(self, src, dest, weight):\n",
+    "    def _insert_edge(self, src, dest, weight) -> None:\n",
+    "        if dest in self.children_of(src):\n",
+    "            raise ValueError(\"Duplicate edge\")\n",
     "        if self.weighted:\n",
     "            self._edges[src].append((dest, weight))\n",
     "        else:\n",
-    "            self._edges[src].append(dest)\n",
+    "            self._edges[src].append((dest,))\n",
+    "        self._str_valid = False\n",
     "\n",
-    "    def _check_weighted(self, edge):\n",
+    "    def _check_weighted(self, edge) -> None:\n",
     "        if edge.weighted and not self.weighted:\n",
     "            raise ValueError(\"This graph is unweighted, cannot add weighted edge\")\n",
     "        if self.weighted and not edge.weighted:\n",
     "            raise ValueError(\"This graph is weighted, cannot add unweighted edge\")\n",
     "\n",
-    "    def add_directed_edge(self, edge):\n",
+    "    def add_directed_edge(self, edge) -> None:\n",
     "        node1, node2 = edge.nodes\n",
-    "        self._check_node(node1)\n",
-    "        self._check_node(node2)\n",
-    "\n",
+    "        self._check_node_exists(node1)\n",
+    "        self._check_node_exists(node2)\n",
     "        if self.weighted is not None:\n",
     "            self._check_weighted(edge)\n",
     "        else:\n",
     "            self.weighted = edge.weighted\n",
-    "\n",
     "        self._insert_edge(edge.src, edge.dest, edge.weight)\n",
     "\n",
-    "    def add_undirected_edge(self, edge):\n",
+    "    def add_undirected_edge(self, edge) -> None:\n",
     "        \"\"\"Treated as two directed edges.\"\"\"\n",
     "        self.add_directed_edge(edge)\n",
     "        # both nodes and weighted now checked\n",
@@ -337,28 +349,82 @@
     "        self._insert_edge(edge.node2, edge.node1, edge.weight)\n",
     "\n",
     "    def children_of(self, node) -> list:\n",
-    "        # always returns a copy of the list, not reference to it\n",
-    "        self._check_node(node)\n",
-    "        if self.weighted:\n",
-    "            return [tup[0] for tup in self._edges[node]]\n",
-    "        else:\n",
-    "            return [node for node in self._edges[node]]\n",
+    "        # never returns the list itself, just a copy\n",
+    "        self._check_node_exists(node)\n",
+    "        return [tup[0] for tup in self._edges[node]]\n",
     "\n",
     "    def has_node(self, node) -> bool:\n",
     "        return node in self._nodes\n",
     "\n",
-    "    def _check_node(self, node):\n",
+    "    def _check_node_exists(self, node) -> None:\n",
     "        if not self.has_node(node):\n",
     "            raise ValueError(\"Node not in graph\")\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return \"\"\n",
+    "    def __str__(self) -> str:\n",
+    "        res = \"\"\n",
+    "        no_edges = []\n",
+    "        for node in self._nodes:\n",
+    "            if len(self.children_of(node)) == 0:\n",
+    "                no_edges.append(node)\n",
+    "                continue\n",
+    "            for child in self._edges[node]:\n",
+    "                if self.weighted:\n",
+    "                    res += f\"{node} ---({child[1]})--> {child[0]}\\n\"\n",
+    "                else:\n",
+    "                    res += f\"{node} -----> {child[0]}\\n\"\n",
+    "        if len(no_edges) == 0:\n",
+    "            res += \"No nodes without edges.\"\n",
+    "        else:\n",
+    "            res += \"Nodes without edges:\\n\"\n",
+    "            for node in no_edges:\n",
+    "                res += f\"{node}\\n\"\n",
+    "            res = res[:-1]\n",
+    "        self._last_computed_str = res\n",
+    "        self._str_valid = True\n",
+    "        return res\n",
     "\n",
     "\n",
     "class Graph(Digraph):\n",
-    "    def add_edge(self, edge):\n",
-    "        self.add_undirected_edge(edge)"
+    "    def add_directed_edge(self, edge):\n",
+    "        raise TypeError(\"Cannot add directed edge into undirected graph\")\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        res = \"\"\n",
+    "        no_edges = []\n",
+    "        to_print = []\n",
+    "        for node in self._nodes:\n",
+    "            if len(self.children_of(node)) == 0:\n",
+    "                no_edges.append(node)\n",
+    "                continue\n",
+    "            for child in self._edges[node]:\n",
+    "                if self.weighted:\n",
+    "                    # conveniently handles the cannonical ordering and the *in* operator\n",
+    "                    edge = Edge(node, child[0], child[1])\n",
+    "                else:\n",
+    "                    edge = Edge(node, child[0])\n",
+    "                if edge not in to_print:\n",
+    "                    to_print.append(edge)\n",
+    "        for edge in to_print:\n",
+    "            res += f\"{edge}\\n\"\n",
+    "        if len(no_edges) == 0:\n",
+    "            res += \"No nodes without edges.\"\n",
+    "        else:\n",
+    "            res += \"Nodes without edges:\\n\"\n",
+    "            for node in no_edges:\n",
+    "                res += f\"{node}\\n\"\n",
+    "            res = res[:-1]\n",
+    "        self._last_computed_str = res\n",
+    "        self._str_valid = True\n",
+    "        return res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4166224",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
