Add __slots__ to TODO

--- a/posts/Python/classes.ipynb
+++ b/posts/Python/classes.ipynb
@@ -10,7 +10,7 @@
     "- descriptors\n",
     "- @property\n",
     "- method resolution order (also for multiple inheritance like class Third(First, Second), see below)\n",
-    "- getattr, hasattr, isinstance, vars, \\_\\_dict\\_\\_, \\_\\_get\\_\\_, \\_\\_set\\_\\_, \\_\\_getattr\\_\\_, \\_\\_getattribute\\_\\_, and others\n",
+    "- getattr, hasattr, isinstance, vars, \\_\\_dict\\_\\_, \\_\\_get\\_\\_, \\_\\_set\\_\\_, \\_\\_getattr\\_\\_, \\_\\_getattribute\\_\\_, \\_\\_slots\\_\\_ and others\n",
     "- staticmethod, classmethod, dataclass\n",
     "- \"Classes support two kinds of operations: attribute references and instantiation.\"\n",
     "- But instances only understand attribute references; two kinds: data atributes and methods\n",
