Imprvs Edges: Edge.init -> post_init, imprvs DirectedEdge.repr

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "BaseEdge is a abstract base class for edges. An edge has two nodes, node1 and node2, can return them in a tuple (.nodes) and can be represented by a string where names of both nodes are separated by a separator. Also is hashable, which means it implements \\_\\_eq\\_\\_ and \\_\\_hash\\_\\_ methods.\n",
-    "_separator, \\_\\_eq\\_\\_ and \\_\\_hash\\_\\_ are abstract methods. Their implementation depends on whether the edge is bidirectional or unidirectional."
+    "_separator is an abstract method, its implementation depends on whether the edge is bidirectional or unidirectional."
    ]
   },
   {
@@ -91,7 +91,7 @@
     "    weight: int | float | None = None\n",
     "\n",
     "    def __post_init__(self):\n",
-    "        # (if weighted, then weight not None)\n",
+    "        # if weighted, then weight not None + bool operators lazy so this works\n",
     "        if self.weighted and self.weight < 0:  # type: ignore\n",
     "            raise ValueError(\"Weight cannot be negative\")\n",
     "\n",
@@ -122,13 +122,14 @@
     "class Edge(BaseEdge):\n",
     "    \"\"\"Bidirectional immutable graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1: Node, node2: Node, weight: int | float | None = None):\n",
+    "    def __post_init__(self):\n",
     "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
     "        # to work correctly and for better (consistent) str representation\n",
-    "        if node1.name > node2.name:\n",
-    "            BaseEdge.__init__(self, node2, node1, weight)\n",
-    "        else:\n",
-    "            BaseEdge.__init__(self, node1, node2, weight)\n",
+    "        if self.node1.name > self.node2.name:\n",
+    "            node1 = self.node1\n",
+    "            object.__setattr__(self, \"node1\", self.node2)\n",
+    "            object.__setattr__(self, \"node2\", node1)\n",
+    "        super().__post_init__()\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -140,9 +141,13 @@
     "    \"\"\"Unidirectional immutable graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node, weight: int | float | None = None):\n",
-    "        # Improves signature of the constructor\n",
+    "        # Improves signature of the constructor to reflect src and dest\n",
     "        # Invariant: src=node1 and dest=node2\n",
-    "        BaseEdge.__init__(self, src, dest, weight)\n",
+    "        super().__init__(src, dest, weight)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        # Reflects the renaming of node1 and node2 to src and dest\n",
+    "        return super().__repr__().replace(\"node1\", \"src\").replace(\"node2\", \"dest\")\n",
     "\n",
     "    @property\n",
     "    def src(self) -> Node:\n",
@@ -159,14 +164,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ae58da5",
-   "metadata": {},
-   "source": [
-    "There is one unfortunate thing about this implementation: `_separator` isn't part of the dataclass machinery (which means it isn't part of `repr`, `eq`, `hash` etc.). It doesn't matter to the functionality, because both `node1` and `node2` are completely determined by either `src` and `dest` or by the name of the two nodes. But the implication is that first, `repr` isn't connected to how the object is created, which hurts readibility and understandability. And second, just seeing the dataclass parameters of an object (node1=..., node2=..., weight=...) isn't enough to determine if the edge is directed or undirected."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c35a6944",
    "metadata": {},
    "source": [
@@ -175,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [],
@@ -201,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -229,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -241,28 +238,37 @@
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}\n",
       "{Node(name='1'), Node(name='2')}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DirectedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=None)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print({e12, e21})  # exactly what we wanted because they are the same edge!\n",
     "print({we12_314, we21_314})\n",
-    "print({node1, Node(\"1\"), node2})\n",
-    "DirectedEdge(node1, node2)  # unfortunately the improved signature not part of repr"
+    "print({node1, Node(\"1\"), node2})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
+   "id": "28dc2c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DirectedEdge(src=Node(name='1'), dest=Node(name='2'), weight=None)\n",
+      "Edge(node1=Node(name='1'), node2=Node(name='2'), weight=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(DirectedEdge(node1, node2)))\n",
+    "print(repr(Edge(node1, node2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "979e429e",
    "metadata": {},
    "outputs": [
@@ -270,13 +276,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "test passed\n",
       "test passed\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    edge_neg = Edge(node1, node2, -3.14)\n",
+    "    Edge(node1, node2, -3.14)\n",
+    "except ValueError:\n",
+    "    print(\"test passed\")\n",
+    "\n",
+    "try:\n",
+    "    DirectedEdge(node1, node2, -3.14)\n",
     "except ValueError:\n",
     "    print(\"test passed\")"
    ]
