Improved testing of graphs

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -246,7 +246,7 @@
      "text": [
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=None)}\n",
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}\n",
-      "{Node(name='2'), Node(name='1')}\n"
+      "{Node(name='1'), Node(name='2')}\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "a83c3efc",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "c4166224",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "eb712a0f",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "46d4f486",
    "metadata": {},
    "outputs": [
@@ -554,16 +554,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ---(0.68)--> 1\n",
-      "0 ---(0.83)--> 2\n",
-      "1 ---(0.59)--> 0\n",
-      "1 ---(0.58)--> 2\n",
-      "2 ---(0.17)--> 3\n",
-      "2 ---(0.03)--> 4\n",
-      "3 ---(0.41)--> 1\n",
-      "3 ---(0.35)--> 4\n",
-      "3 ---(0.15)--> 5\n",
-      "4 ---(0.32)--> 0\n",
+      "0 ---(0.53)--> 1\n",
+      "0 ---(0.84)--> 2\n",
+      "1 ---(0.63)--> 0\n",
+      "1 ---(0.26)--> 2\n",
+      "2 ---(0.01)--> 3\n",
+      "2 ---(0.24)--> 4\n",
+      "3 ---(0.19)--> 1\n",
+      "3 ---(0.06)--> 4\n",
+      "3 ---(0.81)--> 5\n",
+      "4 ---(0.33)--> 0\n",
       "Unconnected nodes:\n",
       "6\n",
       "7\n"
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "5a9a19b4",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "0b68c5ca",
    "metadata": {},
    "outputs": [
@@ -613,15 +613,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 <--(0.22)--> 1\n",
-      "0 <--(0.8)--> 2\n",
-      "0 <--(0.04)--> 4\n",
-      "1 <--(0.41)--> 2\n",
-      "1 <--(0.68)--> 3\n",
-      "2 <--(0.87)--> 3\n",
-      "2 <--(0.32)--> 4\n",
-      "3 <--(0.08)--> 4\n",
-      "3 <--(0.9)--> 5\n",
+      "0 <--(0.89)--> 1\n",
+      "0 <--(0.44)--> 2\n",
+      "0 <--(0.57)--> 4\n",
+      "1 <--(0.6)--> 2\n",
+      "1 <--(0.59)--> 3\n",
+      "2 <--(0.25)--> 3\n",
+      "2 <--(0.36)--> 4\n",
+      "3 <--(0.71)--> 4\n",
+      "3 <--(0.05)--> 5\n",
       "Unconnected nodes:\n",
       "6\n",
       "7\n"
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "e87ce0ed",
    "metadata": {},
    "outputs": [
@@ -652,8 +652,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "cb0a4801",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node not in graph\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    graph_w.add_edge(Edge(Node(\"8\"), Node(\"9\")))\n",
+    "except ValueError as m:\n",
+    "    print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "6c1579e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot add directed edge into undirected graph\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    graph.add_directed_edge(\"hello\")\n",
+    "except TypeError as m:\n",
+    "    print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9bc1efef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This graph is weighted, cannot add unweighted edge\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    graph_w.add_edge(Edge(Node(\"0\"), Node(\"5\")))\n",
+    "except ValueError as m:\n",
+    "    print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3af8936c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This graph is unweighted, cannot add weighted edge\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    digraph.add_undirected_edge(Edge(Node(\"0\"), Node(\"5\"), weight=round(random(), 2)))\n",
+    "except ValueError as m:\n",
+    "    print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "704f3a0a",
    "metadata": {},
    "outputs": [],
    "source": []
