--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -246,7 +246,7 @@
      "text": [
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=None)}\n",
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}\n",
-      "{Node(name='1'), Node(name='2')}\n"
+      "{Node(name='2'), Node(name='1')}\n"
      ]
     }
    ],
@@ -495,23 +495,19 @@
     "for n in nodes:\n",
     "    for g in [digraph, digraph_w, graph, graph_w]:\n",
     "        g.add_node(n)\n",
-    "for edge in edges:\n",
-    "    digraph.add_directed_edge(DirectedEdge(Node(str(edge[0])), Node(str(edge[1]))))\n",
-    "    digraph_w.add_directed_edge(\n",
-    "        DirectedEdge(Node(str(edge[0])), Node(str(edge[1])), weight=round(random(), 2))\n",
-    "    )\n",
+    "for n1, n2 in edges:\n",
+    "    n1, n2 = str(n1), str(n2)\n",
+    "    w = round(random(), 2)\n",
+    "    digraph.add_directed_edge(DirectedEdge(Node(n1), Node(n2)))\n",
+    "    digraph_w.add_directed_edge(DirectedEdge(Node(n1), Node(n2), weight=w))\n",
     "    try:\n",
-    "        graph.add_edge(Edge(Node(str(edge[0])), Node(str(edge[1]))))\n",
+    "        graph.add_edge(Edge(Node(n1), Node(n2)))\n",
     "    except ValueError as m:\n",
-    "        if m == \"Duplicate edge\":\n",
-    "            pass\n",
+    "        pass\n",
     "    try:\n",
-    "        graph_w.add_edge(\n",
-    "            Edge(Node(str(edge[0])), Node(str(edge[1])), weight=round(random(), 2))\n",
-    "        )\n",
+    "        graph_w.add_edge(Edge(Node(n1), Node(n2), weight=w))\n",
     "    except ValueError as m:\n",
-    "        if m == \"Duplicate edge\":\n",
-    "            pass"
+    "        pass"
    ]
   },
   {
@@ -554,16 +550,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ---(0.53)--> 1\n",
-      "0 ---(0.84)--> 2\n",
-      "1 ---(0.63)--> 0\n",
-      "1 ---(0.26)--> 2\n",
-      "2 ---(0.01)--> 3\n",
-      "2 ---(0.24)--> 4\n",
-      "3 ---(0.19)--> 1\n",
-      "3 ---(0.06)--> 4\n",
-      "3 ---(0.81)--> 5\n",
-      "4 ---(0.33)--> 0\n",
+      "0 ---(0.23)--> 1\n",
+      "0 ---(0.96)--> 2\n",
+      "1 ---(0.41)--> 0\n",
+      "1 ---(0.71)--> 2\n",
+      "2 ---(0.79)--> 3\n",
+      "2 ---(0.49)--> 4\n",
+      "3 ---(0.45)--> 1\n",
+      "3 ---(0.59)--> 4\n",
+      "3 ---(0.54)--> 5\n",
+      "4 ---(0.56)--> 0\n",
       "Unconnected nodes:\n",
       "6\n",
       "7\n"
@@ -613,15 +609,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 <--(0.89)--> 1\n",
-      "0 <--(0.44)--> 2\n",
-      "0 <--(0.57)--> 4\n",
-      "1 <--(0.6)--> 2\n",
-      "1 <--(0.59)--> 3\n",
-      "2 <--(0.25)--> 3\n",
-      "2 <--(0.36)--> 4\n",
-      "3 <--(0.71)--> 4\n",
-      "3 <--(0.05)--> 5\n",
+      "0 <--(0.23)--> 1\n",
+      "0 <--(0.96)--> 2\n",
+      "0 <--(0.56)--> 4\n",
+      "1 <--(0.71)--> 2\n",
+      "1 <--(0.45)--> 3\n",
+      "2 <--(0.79)--> 3\n",
+      "2 <--(0.49)--> 4\n",
+      "3 <--(0.59)--> 4\n",
+      "3 <--(0.54)--> 5\n",
       "Unconnected nodes:\n",
       "6\n",
       "7\n"
@@ -687,7 +683,7 @@
    ],
    "source": [
     "try:\n",
-    "    graph.add_directed_edge(\"hello\")\n",
+    "    graph.add_directed_edge(Edge(Node(\"0\"), Node(\"5\")))\n",
     "except TypeError as m:\n",
     "    print(m)"
    ]
@@ -729,7 +725,7 @@
    ],
    "source": [
     "try:\n",
-    "    digraph.add_undirected_edge(Edge(Node(\"0\"), Node(\"5\"), weight=round(random(), 2)))\n",
+    "    digraph.add_undirected_edge(Edge(Node(\"0\"), Node(\"5\"), weight=0.5))\n",
     "except ValueError as m:\n",
     "    print(m)"
    ]
