Improves graphs: __str__ not cashing, weighted mandatory, removes NWTuple,  _nodes now set, merges _check_weight_compatibility to _check_nodes_and_weights

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -314,40 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a83c3efc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NWTuple(tuple):\n",
-    "    \"\"\"\n",
-    "    Auxiliary node-weight tuple for Digraph and Graph.\n",
-    "\n",
-    "    Saves space when weight=None and allows more readable downstream code.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # saves 8 bytes per weightless instance\n",
-    "    # ammortizes the memory cost of the class after about 100 wweightless instances\n",
-    "    def __new__(cls, node, weight=None):\n",
-    "        if weight is None:\n",
-    "            return super().__new__(cls, (node,))\n",
-    "        else:\n",
-    "            return super().__new__(cls, (node, weight))\n",
-    "\n",
-    "    def __getitem__(self, index):  # type: ignore\n",
-    "        if index == 1 and len(self) == 1:\n",
-    "            return None\n",
-    "        return super().__getitem__(index)\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        if len(self) == 1:\n",
-    "            return f\"NWTuple({self[0]!r},)\"\n",
-    "        else:\n",
-    "            return f\"NWTuple({self[0]!r}, {self[1]!r})\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
@@ -364,21 +330,18 @@
     "    # Internally, an \"edge\" is one-way only.\n",
     "    # Bidirectional edges treated as having an \"edge\" in both directions.\n",
     "\n",
-    "    def __init__(self, weighted=None):\n",
+    "    def __init__(self, weighted):\n",
     "        \"\"\"When weighted is None, it is determined by the first added edge.\"\"\"\n",
-    "        self._nodes = []\n",
+    "        self._nodes = set()\n",
     "        self._edges = {}\n",
     "        self.weighted = weighted\n",
-    "        self._last_str = \"Empty graph\"\n",
-    "        self._last_str_valid = True\n",
     "\n",
     "    def add_node(self, node: Node) -> None:\n",
     "        if self.has_node(node):\n",
     "            raise ValueError(\"Duplicate node\")\n",
     "        else:\n",
-    "            self._nodes.append(node)\n",
+    "            self._nodes.add(node)\n",
     "            self._edges[node] = []\n",
-    "        self._last_str_valid = False\n",
     "\n",
     "    def has_node(self, node: Node) -> bool:\n",
     "        return node in self._nodes\n",
@@ -387,26 +350,21 @@
     "        if not self.has_node(node):\n",
     "            raise ValueError(\"Node not in graph\")\n",
     "\n",
-    "    def _check_weight_compatibility(self, edge) -> None:\n",
+    "    def _check_nodes_and_weights(self, edge) -> None:\n",
+    "        node1, node2 = edge.nodes\n",
+    "        self._check_node_exists(node1)\n",
+    "        self._check_node_exists(node2)\n",
     "        if edge.weighted and not self.weighted:\n",
     "            raise ValueError(\"This graph is unweighted, cannot add weighted edge\")\n",
     "        if self.weighted and not edge.weighted:\n",
     "            raise ValueError(\"This graph is weighted, cannot add unweighted edge\")\n",
     "\n",
-    "    def _check_nodes_and_weights(self, edge) -> None:\n",
-    "        node1, node2 = edge.nodes\n",
-    "        self._check_node_exists(node1)\n",
-    "        self._check_node_exists(node2)\n",
-    "        if self.weighted is not None:\n",
-    "            self._check_weight_compatibility(edge)\n",
-    "        else:\n",
-    "            self.weighted = edge.weighted\n",
-    "\n",
     "    def _insert_edge(self, src, dest, weight) -> None:\n",
     "        if dest in self.children_of(src):\n",
     "            raise ValueError(\"Duplicate edge\")\n",
-    "        self._edges[src].append(NWTuple(dest, weight))\n",
-    "        self._last_str_valid = False\n",
+    "        # could be optimized for not storing weight if None, but the congitive overhead\n",
+    "        # would not be worth it\n",
+    "        self._edges[src].append((dest, weight))\n",
     "\n",
     "    def add_directed_edge(self, edge) -> None:\n",
     "        self._check_nodes_and_weights(edge)\n",
@@ -444,12 +402,12 @@
     "        return res\n",
     "\n",
     "    def __str__(self) -> str:\n",
-    "        if self._last_str_valid:\n",
-    "            return self._last_str\n",
+    "        # could be cashed, but graphs large enough for cashing to make sense\n",
+    "        # wouldn't make sense to try to print anyway\n",
+    "        if len(self._nodes) == 0:\n",
+    "            return \"Empty graph.\"\n",
     "        else:\n",
-    "            self._last_str = self._compute_str(DirectedEdge)\n",
-    "            self._last_str_valid = True\n",
-    "            return self._last_str\n",
+    "            return self._compute_str(DirectedEdge)\n",
     "\n",
     "\n",
     "class Graph(Digraph):\n",
@@ -461,12 +419,10 @@
     "        self.add_undirected_edge(edge)\n",
     "\n",
     "    def __str__(self) -> str:\n",
-    "        if self._last_str_valid:\n",
-    "            return self._last_str\n",
+    "        if len(self._nodes) == 0:\n",
+    "            return \"Empty graph.\"\n",
     "        else:\n",
-    "            self._last_str = self._compute_str(Edge)\n",
-    "            self._last_str_valid = True\n",
-    "            return self._last_str"
+    "            return self._compute_str(Edge)"
    ]
   },
   {
@@ -479,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c4166224",
    "metadata": {},
    "outputs": [],
@@ -488,10 +444,10 @@
     "nodes = []\n",
     "for name in range(8):\n",
     "    nodes.append(Node(str(name)))\n",
-    "digraph = Digraph()\n",
+    "digraph = Digraph(weighted=False)\n",
     "digraph_w = Digraph(weighted=True)\n",
-    "graph = Graph()\n",
-    "graph_w = Graph()  # first edge will decide\n",
+    "graph = Graph(weighted=False)\n",
+    "graph_w = Graph(weighted=True)\n",
     "for n in nodes:\n",
     "    for g in [digraph, digraph_w, graph, graph_w]:\n",
     "        g.add_node(n)\n",
@@ -512,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "eb712a0f",
    "metadata": {},
    "outputs": [
@@ -531,8 +487,8 @@
       "3 -----> 5\n",
       "4 -----> 0\n",
       "Unconnected nodes:\n",
-      "6\n",
-      "7\n"
+      "7\n",
+      "6\n"
      ]
     }
    ],
@@ -542,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "46d4f486",
    "metadata": {},
    "outputs": [
@@ -550,19 +506,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ---(0.23)--> 1\n",
-      "0 ---(0.96)--> 2\n",
-      "1 ---(0.41)--> 0\n",
-      "1 ---(0.71)--> 2\n",
-      "2 ---(0.79)--> 3\n",
-      "2 ---(0.49)--> 4\n",
-      "3 ---(0.45)--> 1\n",
-      "3 ---(0.59)--> 4\n",
-      "3 ---(0.54)--> 5\n",
-      "4 ---(0.56)--> 0\n",
+      "0 ---(0.6)--> 1\n",
+      "0 ---(0.72)--> 2\n",
+      "1 ---(0.73)--> 0\n",
+      "1 ---(0.83)--> 2\n",
+      "2 ---(0.43)--> 3\n",
+      "2 ---(0.82)--> 4\n",
+      "3 ---(0.27)--> 1\n",
+      "3 ---(0.18)--> 4\n",
+      "3 ---(0.83)--> 5\n",
+      "4 ---(0.13)--> 0\n",
       "Unconnected nodes:\n",
-      "6\n",
-      "7\n"
+      "7\n",
+      "6\n"
      ]
     }
    ],
@@ -572,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "5a9a19b4",
    "metadata": {},
    "outputs": [
@@ -590,8 +546,8 @@
       "3 <----> 4\n",
       "3 <----> 5\n",
       "Unconnected nodes:\n",
-      "6\n",
-      "7\n"
+      "7\n",
+      "6\n"
      ]
     }
    ],
@@ -601,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0b68c5ca",
    "metadata": {},
    "outputs": [
@@ -609,18 +565,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 <--(0.23)--> 1\n",
-      "0 <--(0.96)--> 2\n",
-      "0 <--(0.56)--> 4\n",
-      "1 <--(0.71)--> 2\n",
-      "1 <--(0.45)--> 3\n",
-      "2 <--(0.79)--> 3\n",
-      "2 <--(0.49)--> 4\n",
-      "3 <--(0.59)--> 4\n",
-      "3 <--(0.54)--> 5\n",
+      "0 <--(0.6)--> 1\n",
+      "0 <--(0.72)--> 2\n",
+      "0 <--(0.13)--> 4\n",
+      "1 <--(0.83)--> 2\n",
+      "1 <--(0.27)--> 3\n",
+      "2 <--(0.43)--> 3\n",
+      "2 <--(0.82)--> 4\n",
+      "3 <--(0.18)--> 4\n",
+      "3 <--(0.83)--> 5\n",
       "Unconnected nodes:\n",
-      "6\n",
-      "7\n"
+      "7\n",
+      "6\n"
      ]
     }
    ],
@@ -630,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e87ce0ed",
    "metadata": {},
    "outputs": [
@@ -638,17 +594,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty graph\n"
+      "Empty graph.\n"
      ]
     }
    ],
    "source": [
-    "print(Graph())"
+    "print(Graph(weighted=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "cb0a4801",
    "metadata": {},
    "outputs": [
@@ -669,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6c1579e0",
    "metadata": {},
    "outputs": [
@@ -690,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9bc1efef",
    "metadata": {},
    "outputs": [
@@ -711,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "3af8936c",
    "metadata": {},
    "outputs": [
