Improves graphs: _check_nodes_and_weights -> _check_edge

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -350,7 +350,7 @@
     "        if not self.has_node(node):\n",
     "            raise ValueError(\"Node not in graph\")\n",
     "\n",
-    "    def _check_nodes_and_weights(self, edge) -> None:\n",
+    "    def _check_edge(self, edge) -> None:\n",
     "        node1, node2 = edge.nodes\n",
     "        self._check_node_exists(node1)\n",
     "        self._check_node_exists(node2)\n",
@@ -367,12 +367,12 @@
     "        self._edges[src].append((dest, weight))\n",
     "\n",
     "    def add_directed_edge(self, edge) -> None:\n",
-    "        self._check_nodes_and_weights(edge)\n",
+    "        self._check_edge(edge)\n",
     "        self._insert_edge(edge.src, edge.dest, edge.weight)\n",
     "\n",
     "    def add_undirected_edge(self, edge) -> None:\n",
     "        \"\"\"Treated as two directed edges.\"\"\"\n",
-    "        self._check_nodes_and_weights(edge)\n",
+    "        self._check_edge(edge)\n",
     "        self._insert_edge(edge.node1, edge.node2, edge.weight)\n",
     "        self._insert_edge(edge.node2, edge.node1, edge.weight)\n",
     "\n",
@@ -506,16 +506,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ---(0.6)--> 1\n",
-      "0 ---(0.72)--> 2\n",
-      "1 ---(0.73)--> 0\n",
-      "1 ---(0.83)--> 2\n",
-      "2 ---(0.43)--> 3\n",
-      "2 ---(0.82)--> 4\n",
-      "3 ---(0.27)--> 1\n",
-      "3 ---(0.18)--> 4\n",
-      "3 ---(0.83)--> 5\n",
-      "4 ---(0.13)--> 0\n",
+      "0 ---(0.32)--> 1\n",
+      "0 ---(0.48)--> 2\n",
+      "1 ---(0.8)--> 0\n",
+      "1 ---(0.36)--> 2\n",
+      "2 ---(0.25)--> 3\n",
+      "2 ---(0.45)--> 4\n",
+      "3 ---(0.9)--> 1\n",
+      "3 ---(0.04)--> 4\n",
+      "3 ---(0.88)--> 5\n",
+      "4 ---(0.56)--> 0\n",
       "Unconnected nodes:\n",
       "7\n",
       "6\n"
@@ -565,15 +565,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 <--(0.6)--> 1\n",
-      "0 <--(0.72)--> 2\n",
-      "0 <--(0.13)--> 4\n",
-      "1 <--(0.83)--> 2\n",
-      "1 <--(0.27)--> 3\n",
-      "2 <--(0.43)--> 3\n",
-      "2 <--(0.82)--> 4\n",
-      "3 <--(0.18)--> 4\n",
-      "3 <--(0.83)--> 5\n",
+      "0 <--(0.32)--> 1\n",
+      "0 <--(0.48)--> 2\n",
+      "0 <--(0.56)--> 4\n",
+      "1 <--(0.36)--> 2\n",
+      "1 <--(0.9)--> 3\n",
+      "2 <--(0.25)--> 3\n",
+      "2 <--(0.45)--> 4\n",
+      "3 <--(0.04)--> 4\n",
+      "3 <--(0.88)--> 5\n",
       "Unconnected nodes:\n",
       "7\n",
       "6\n"
