Graph now has docstring

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
@@ -411,6 +411,8 @@
     "\n",
     "\n",
     "class Graph(Digraph):\n",
+    "    \"\"\"Undirected graph.\"\"\"\n",
+    "\n",
     "    def add_directed_edge(self, edge):\n",
     "        raise TypeError(\"Cannot add directed edge into undirected graph\")\n",
     "\n",
