_separator split into two, Edge ordering not name-based

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -115,17 +115,16 @@
     "\n",
     "    @property\n",
     "    @abstractmethod\n",
-    "    def _separator(self) -> str:\n",
+    "    def _separator(self) -> Tuple[str, str]:\n",
     "        pass\n",
     "\n",
     "    def __str__(self) -> str:\n",
     "        node1, node2 = self.nodes\n",
-    "        sep = self._separator\n",
-    "        half = len(sep) // 2\n",
+    "        left, right = self._separator\n",
     "        if self.weighted:\n",
-    "            return f\"{node1} {sep[:half]}({self.weight}){sep[half:]} {node2}\"\n",
+    "            return f\"{node1} {left}({self.weight}){right} {node2}\"\n",
     "        else:\n",
-    "            return f\"{node1} {self._separator} {node2}\"\n",
+    "            return f\"{node1} {left}{right} {node2}\"\n",
     "\n",
     "\n",
     "@dataclass(frozen=True, order=True)\n",
@@ -135,15 +134,15 @@
     "    def __post_init__(self):\n",
     "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
     "        # to work correctly and for better (consistent) str representation\n",
-    "        if self.node1.name > self.node2.name:\n",
+    "        if self.node1 > self.node2:\n",
     "            node1 = self.node1\n",
     "            object.__setattr__(self, \"node1\", self.node2)\n",
     "            object.__setattr__(self, \"node2\", node1)\n",
     "        super().__post_init__()\n",
     "\n",
     "    @property\n",
-    "    def _separator(self) -> str:\n",
-    "        return \"<---->\"\n",
+    "    def _separator(self) -> Tuple[str, str]:\n",
+    "        return \"<--\", \"-->\"\n",
     "\n",
     "\n",
     "@dataclass(frozen=True, order=True)\n",
@@ -168,8 +167,8 @@
     "        return self.nodes[1]\n",
     "\n",
     "    @property\n",
-    "    def _separator(self) -> str:\n",
-    "        return \"----->\""
+    "    def _separator(self) -> Tuple[str, str]:\n",
+    "        return \"---\", \"-->\""
    ]
   },
   {
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [],
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "28dc2c4e",
    "metadata": {},
    "outputs": [
@@ -278,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "979e429e",
    "metadata": {},
    "outputs": [
